--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "apollo-boost": "^0.4.2",
     "expo": "^33.0.0",
     "graphql": "^14.3.1",
+    "polished": "^3.4.1",
     "react": "16.8.3",
     "react-apollo": "^2.5.6",
     "react-apollo-hooks": "^0.4.5",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-web": "^0.11.4"
+    "react-native-web": "^0.11.4",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@types/react": "^16.8.19",
