--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-web": "^0.11.4",
+    "react-navigation": "^3.11.0",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
